# Implicit-World-Modeling

./: .gitignore  .project-sync.json  AGENTS.md  README.md
Implicit-World-Modeling/: .env.example  AGENTS.md  ARCHITECTURE.md  README.md  implicit-world-modeling.ipynb  pyproject.toml
Implicit-World-Modeling/configs/lf_dataset/: AndroidControl  AndroidControl_EXP01  AndroidControl_EXP02  AndroidControl_EXP03  AndroidControl_EXP04  AndroidControl_EXP05  AndroidControl_EXP06  MobiBench  MonkeyCollection  dataset_info.json
Implicit-World-Modeling/configs/remote/: run.template.yaml
Implicit-World-Modeling/configs/train/IWM-AC_EXP01_ratio37/stage1_full/: qwen2.5-vl-3b_world-model.yaml  qwen2.5-vl-7b_world-model.yaml  qwen3-vl-4b_world-model.yaml  qwen3-vl-8b_world-model.yaml
Implicit-World-Modeling/configs/train/IWM-AC_EXP01_ratio37/stage1_lora/: qwen2.5-vl-3b_world-model.yaml  qwen2.5-vl-7b_world-model.yaml  qwen3-vl-4b_world-model.yaml  qwen3-vl-8b_world-model.yaml
Implicit-World-Modeling/configs/train/IWM-AC_EXP01_ratio37/stage2_full/: qwen2.5-vl-3b_base.yaml  qwen2.5-vl-3b_world-model-full.yaml  qwen2.5-vl-3b_world-model-lora.yaml  qwen2.5-vl-7b_base.yaml  (+8 more)
Implicit-World-Modeling/implicit_world_modeling/: gen_configs.py  lf_registry.py
Implicit-World-Modeling/patches/llamafactory/: 0001-diff-loss.patch  0002-double-ce-fix.patch  MANIFEST.sha256  README.md
Implicit-World-Modeling/scripts/: _action_eval.py  _common.sh  _hungarian_eval.py  build_exp05_data.py  build_exp05_stage2_data.py  eval_viewer.py  extract_androidcontrol_images.py  extract_androidcontrol_metadata.py  filter_long_samples.py  gpu_policy.py  mirror_exp03.py  mirror_exp04.py  mirror_exp05.py  mirror_experiment.py  post_train_q25_ratio37.sh  remote_launch.sh  setup_llamafactory.sh  split_data.py  stage1_eval.sh  stage1_train.sh  stage2_eval.sh  stage2_merge.sh  stage2_train.sh  tmux_exp01_q25_ratio37.sh  tmux_exp04_stage1.sh
Implicit-World-Modeling/scripts/diff_loss/: apply_llamafactory_patch.py  hungarian_diff.py  hungarian_diff_v2.py  hungarian_metric.py  hungarian_metric_v2.py  preprocess_dataset.py  preprocess_dataset_v2.py  token_weight_builder.py  token_weight_builder_v2.py
Implicit-World-Modeling/tests/: test_action_eval.py  test_action_eval_xy.py  test_diff_loss_double_ce.py  test_diff_loss_v2.py  test_gen_configs.py  test_gpu_policy.py  test_mirror_experiment.py
Monkey-Collector/: .env.example  AGENTS.md  ARCHITECTURE.md  README.md  pyproject.toml
Monkey-Collector/catalog/: activities.json  apps.csv  download_apks.py  extract_activities.py
Monkey-Collector/catalog/apks/: MISSING.json  MISSING.md
Monkey-Collector/config/: run.yaml
Monkey-Collector/docs/: build_deck.py  monkey_collector_collection_pipeline.pptx  prereg_s9_diag_20260714.md
Monkey-Collector/src/monkey_collector/: __init__.py  adb.py  catalog_activities.py  cli.py  config.py  migrate_layout.py  paths.py  storage.py  tcp_server.py
Monkey-Collector/src/monkey_collector/domain/: actions.py  activity_coverage.py  cost_tracker.py  page_graph.py
Monkey-Collector/src/monkey_collector/export/: converter.py
Monkey-Collector/src/monkey_collector/llm/: __init__.py  client.py  element_extractor.py  screen_grouper.py
Monkey-Collector/src/monkey_collector/pipeline/: __init__.py  app_catalog.py  collection_loop.py  collector.py  explorer.py  installed_sync.py  recovery.py  reset.py  screen_guard.py  session_manager.py  text_generator.py
Monkey-Collector/src/monkey_collector/xml/: parser_base.py  structured_parser.py  ui_tree.py
Monkey-Collector/tests/fixtures/: session_fixtures.py  xml_samples.py
Monkey-Collector/tests/integration/: test_collector.py  test_collector_guards.py  test_coverage_guided_explorer.py  test_download_apks.py  test_llm_guided_explorer.py  test_server.py
Monkey-Collector/tests/unit/: test_action_mapper.py  test_actions.py  test_activity_coverage.py  test_adb_keyboard.py  test_adb_parse_activity.py  test_app_catalog.py  test_bm25.py  test_canvas_matching.py  test_catalog_activities.py  test_cli.py  test_config.py  test_converter.py  test_coverage_activity.py  test_effect_log.py  test_element_extractor.py  test_element_lines.py  test_explorer_coverage.py  test_explorer_ranking.py  test_explorer_root_back.py  test_launcher_drift.py  test_llm_client.py  test_loop_budget.py  test_loop_no_progress.py  test_loop_stale_signal.py  test_luminance.py  test_memory_unexplored.py  test_migrate_layout.py  test_navigator.py  test_navigator_strategies.py  test_nudge_static_screen.py  test_package_guard.py  test_page_graph.py  test_page_graph_matching.py  test_poke.py  test_rehydrate.py  test_reset.py  test_run_resume.py  test_screen_grouper.py  test_screen_guard.py  test_screen_matcher.py  (+10 more)
(+247 files in other folders)
