[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "implicit-world-modeling"
version = "0.1.0"
description = "Training and evaluation pipeline for implicit world modeling and action prediction on GUI agents."
requires-python = ">=3.11,<3.13"
# 공통 deps. transformers / 서브프로젝트 / deepspeed / vllm 등은 extras 에서 선언한다.
# 설치는 conda env (`implicit-world-modeling`) 에서:
#     conda create -n implicit-world-modeling python=3.12 -y
#     conda activate implicit-world-modeling
#     pip install -e ".[llamafactory]"
#     pip install -e ./LlamaFactory   # editable 서브프로젝트
# transformers 는 `>=4.57.1,<4.58` 로 고정한다 (Qwen3-VL processor 가 4.57+ 에서
# 도입됐고, vllm 0.11.2 의 `transformers<5` 와 LlamaFactory pin `!=4.57.0,<=5.2.0`
# 의 교집합. Qwen2.5-VL 학습은 4.57.x 의 token/feature strict mismatch 회귀 영향을
# 받을 수 있으므로 별도 env 또는 재검증 필요).
# 두 pin 이 겹치므로 `--no-deps` 우회는 더 이상 필요 없다.
# 서브프로젝트의 `pyproject.toml` 은 수정하지 않는다.
dependencies = [
  "python-dotenv",
  "pyyaml",
  "pillow",
  "pyarrow",
  "sentencepiece",
  "tiktoken",
  "beautifulsoup4",
  "munkres",
  "rouge",
  "lxml",
  "nltk",
  "jieba",
  "rouge-chinese",
  "huggingface_hub>=0.34.0",
  # accelerate 는 `accelerate launch` 로 직접 호출되므로 transitive 에 맡기지
  # 않고 명시적으로 고정한다 (CLI 보장).
  "accelerate>=1.3.0,<=1.11.0",
  # torch 2.9.x + Qwen2.5-VL `Conv3D` (visual.patch_embed) 조합은 심각한 학습 성능
  # 회귀 (pytorch/pytorch#166122) 가 있어 LlamaFactory loader 가 ValueError 로 차단한다.
  # LlamaFactory 의 `torch>=2.4.0` 은 상한이 없으므로 여기서 명시적으로 상한을 건다.
  "torch>=2.4.0,<2.9",
  "torchvision>=0.19.0,<0.24",
]

# LlamaFactory 전용 (Qwen2/2.5/3-VL 계열). 서브프로젝트는 `pip install -e ./LlamaFactory`
# 로 editable 설치한다 (위 설치 절차 참조).
[project.optional-dependencies]
llamafactory = [
  "llamafactory",
  # vllm 0.11.2 가 `transformers<5,>=4.56.0` 을 강제하므로 5.x 는 사용 불가.
  # LlamaFactory 서브프로젝트 pin (`>=4.55.0,<=5.2.0,!=4.57.0`) 과의 교집합 = 4.56–4.57.x.
  # Qwen3-VL processor 는 4.57+ 에서 추가됐으므로 4.57.1 이상 필요.
  # 4.57.x 는 Qwen2.5-VL `get_placeholder_mask` strict mismatch 회귀가 있으니
  # Qwen2.5-VL 학습 시 별도 env 또는 재검증이 필요하다.
  "transformers>=4.57.1,<4.58",
  "deepspeed>=0.10.0,<=0.18.4",
  # vllm wheel 은 정확한 torch 버전을 강제한다 (pin: torch==X.Y.Z):
  #   0.10.0–0.10.1.1 → torch 2.7.1
  #   0.10.2 / 0.11.0 → torch 2.8.0   ← 우리 가드 (torch<2.9)
  #   0.11.1+         → torch 2.9.0   (Qwen2.5-VL Conv3D 회귀로 사용 불가)
  # 따라서 torch 2.8 가족과 양립 가능한 vllm 은 0.10.2 / 0.11.0 둘뿐. pip 는
  # 더 높은 0.11.0 을 선택한다.
  # 알려진 0.11.0 한계: Qwen2.5-VL config 의 `rope_parameters.rope_type` (modern) +
  # `type=mrope` (legacy) 동시 존재 케이스에서 pydantic ValidationError. Qwen3-VL /
  # Qwen2-VL / Qwen3.5 평가에는 영향 없음. Qwen2.5-VL 평가가 필요해지면 그때
  # 별도 env 또는 config sanitize 로 대응 (별건).
  "vllm>=0.10.2,<0.11.1",
  # LlamaFactory scripts/vllm_infer.py 가 비디오 처리용으로 `import av`, CLI 진입점으로 `import fire`,
  # HF 데이터셋 로더로 `from datasets import load_dataset` 를 한다.
  "av",
  "fire",
  "datasets",
  # LlamaFactory 서브프로젝트의 런타임 import 체인에서 필요한 deps 를
  # 우리 쪽에서 명시 (서브프로젝트 pyproject 는 건드리지 않으므로).
  "peft>=0.18.0,<=0.18.1",
  "trl>=0.18.0,<=0.24.0",
  "torchdata>=0.10.0,<=0.11.0",
  "einops",
  "modelscope",
  "hf-transfer",
  "omegaconf",
]

[tool.setuptools.packages.find]
include = ["implicit_world_modeling*"]
